[package]
name = "form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
any = []
mysql = []

[dependencies]
sqlx = { version = "0.7.1", features = ["mysql", "any", "runtime-tokio", "uuid"] }
form-macros = { path = "./macros" }